2003-09-12  Tom Tromey  <tromey@redhat.com>

	* Makefile.am ($(srcdir)/testsuite): tests/atconfig and
	tests/atlocal are not in srcdir.

	* Makefile.am (TESTS): unit_tests is not in srcdir.

2003-09-11  graydon hoare  <graydon@redhat.com>

	* commands.cc: Check for MT directory in status.
	* commands.cc: Require directory for checkout.
	* commands.cc: Delete MT/work file after checkout.
	* commands.cc: Implement 'revert', following tromey's lead.
	* commands.cc: Print base, working manifest ids in status.

	* diff_patch.cc: Further merge corrections.
	* diff_patch.cc (unidiff): Compensate for occasional miscalculation
	of LCS.

	* tests/t_merge.at: Check that heads works after a merge.
	* tests/t_fork.at:  Check that heads works after a fork.
	* tests/t_genkey.at: Remove use of 'import'.
	* tests/t_cwork.at: Check deletion of work file on checkout.
	* tests/t_revert.at: Check that revert works.

	* commands.cc, monotone.cc: Report unknown commands nicely.
	
2003-09-08  graydon hoare  <graydon@pobox.com>

	* tests/merge.at: Accept tromey's non-error case for update.

	* commands.cc(try_one_merge): Write merged version to packet
	writer, not directly to db.
	(merge): Write branch, changelog cert on merged version to db.

	* std_hooks.lua(merge3): Open result in mode "r", not "w+".
	
2003-09-06  Tom Tromey  <tromey@redhat.com>

	* update.cc (pick_update_target): Not an error if nothing to
	update.

	* monotone.texi: Use VERSION; include version.texi.

	* monotone.1: Document "co".
	* monotone.texi (Commands): Document "co".
	* commands.cc (ALIAS): New macro.
	(co): New alias.

	* README: Updated.

	* txt2c.cc: Added missing file.

	* texinfo.tex, INSTALL, Makefile.in, aclocal.m4, compile, depcomp,
	install-sh, missing, mkinstalldirs: Removed generated files.

2003-09-04  graydon hoare  <graydon@pobox.com>

	* Makefile.am, depot.cc, http_tasks.cc, http_tasks.hh,
	lua.cc, lua.hh, monotone.texi, network.cc, tests/t_http.at,
	vocab_terms.hh: 
