@@ -104,3 +104,4 @@ m4_include(tests/t_http.at)
 m4_include(tests/t_unidiff2.at)
 m4_include(tests/t_cwork.at)
 m4_include(tests/t_revert.at)
+m4_include(tests/t_drop.at)
